--- a/source/index.html
+++ b/source/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <script>var WebFontConfig = {
+      google: { families: [ 'Open+Sans:400,700,600,400italic,700italic,300:latin' ] }
+    };
+    (function() {
+      var wf = document.createElement('script');
+      wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+      wf.type = 'text/javascript';
+      wf.async = 'true';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(wf, s);
+    })(); </script>
+
+    <title>Ticket Bookmarklet</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8">
     <meta name="description" content="">
