--- a/source/index.html
+++ b/source/index.html
@@ -15,6 +15,7 @@
     })(); </script>
 
     <title>Ticket Bookmarklet</title>
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8">
     <meta name="description" content="">
@@ -22,6 +23,7 @@
   </head>
   <body>
     <main></main>
+    <script src="vendor.js"></script>
     <script src="application.js"></script>
   </body>
 </html>
