--- a/app.html
+++ b/app.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main></main>
-    <script src="vendor.js"></script>
-    <script src="application.js"></script>
+    <script src="vendor.201601251012.js"></script>
+    <script src="application.201601251012.js"></script>
   </body>
 </html>
